--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,10 @@ allprojects {
     repositories {
         jcenter()
         google()
+        mavenCentral()
+        maven {
+            url "https://maven.google.com"
+        }
     }
 }
 
